--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 # Project-specific ignores
 # ====================================================
 
-# Raw experimental data (large, private, not tracked)
-rawdata/
-
 # Processed data (ignore until publication)
-data/
+# data/
 
 # Analysis outputs (reproducible, don't version-control)
 output/
